# slackbot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.sh
SRC/: app.py  config.py  llm_model.py  regex.py
SRC/utils/: config.py  llm_model.py
src/: app.py
src/utils/: config.py  llm_model.py  logger.py  model_funcs.py  regex.py  regex_funcs.py  system_prompts.py
